@@ -1,5 +1,3 @@
-/* $Id$ */
-
 /*****************************************************************************
  * HPUCODE --- Uuencoded files from FTN messagebase extractor
  *****************************************************************************
@@ -23,6 +21,7 @@
  * along with HPT; see the file COPYING.  If not, write to the Free
  * Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
  *****************************************************************************/
+/* $Id$ */
 
 #include "uuecode.h"
 
